--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@remotion/cli": "4.0.363",
     "@remotion/google-fonts": "4.0.363",
+    "@remotion/media-parser": "^4.0.363",
+    "@remotion/media-utils": "^4.0.363",
     "@remotion/player": "4.0.363",
     "@remotion/tailwind": "4.0.363",
     "@remotion/tailwind-v4": "^4.0.363",
