--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "remotion": "4.0.363"
+    "remotion": "4.0.363",
+    "rgbaster": "^2.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
